[setup]: auth-service create user